<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@color/white">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mint_green">

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="full name"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="emailAddress"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/editHeight"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="height"
            android:hint="@string/height_cm"
            android:inputType="numberDecimal"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/editWeight"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="weight"
            android:hint="@string/weight_kg"
            android:inputType="numberDecimal"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/editAge"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="age"
            android:hint="@string/age"
            android:inputType="numberDecimal"
            android:layout_marginBottom="16dp"/>

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_changes"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/purple"
            android:textColor="@android:color/white" />

    </LinearLayout>
</ScrollView>
