<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="24dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <EditText
        android:id="@+id/et_old_password"
        android:autofillHints="old password"
        android:hint="@string/old_password"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/soft_pink"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/et_new_password"
        android:autofillHints="new password"
        android:hint="@string/new_password"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/soft_pink"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/et_confirm_password"
        android:autofillHints="confirm new password"
        android:hint="@string/confirm_new_password"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/soft_pink"
        android:layout_marginBottom="24dp" />

    <Button
        android:id="@+id/btn_change_password"
        android:text="@string/change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/mint_green"
        android:textColor="@android:color/black" />
</LinearLayout>
