<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="4dp">

    <!-- My Profile -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_profile"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@android:color/white"
        app:cardElevation="10dp"
        app:cardCornerRadius="24dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <ImageView
                android:id="@+id/img_profile"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_user"
                android:contentDescription="@string/profile_icon" />

            <TextView
                android:layout_toEndOf="@id/img_profile"
                android:layout_marginStart="16dp"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_profile"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <!-- Health Checkups -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_health_checkup"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@android:color/white"
        app:cardElevation="10dp"
        app:cardCornerRadius="24dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <ImageView
                android:id="@+id/img_health"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_health_checkup"
                android:contentDescription="@string/health_icon" />

            <TextView
                android:layout_toEndOf="@id/img_health"
                android:layout_marginStart="16dp"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/health_checkups"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <!-- Period Tracker -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_period_tracker"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@android:color/white"
        app:cardElevation="10dp"
        app:cardCornerRadius="24dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <ImageView
                android:id="@+id/img_period"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_period_tracker"
                android:contentDescription="@string/period_tracker_icon" />

            <TextView
                android:layout_toEndOf="@id/img_period"
                android:layout_marginStart="16dp"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/period_tracker"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
